# esp-brookesia-simulator_vscode

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README_CN.md  esp-brookesia-simulator_vscode.code-workspace  esp-ui-simulator_vscode.code-workspace  simulator.code-workspace
.github/workflows/: build_test.yml  run_test.yml
components/: esp_brookesia_apps_phone_settings_conf.h  esp_brookesia_conf.h  esp_ui_conf.h  lv_conf.h  lv_drv_conf.h
main/: main.cpp
